2009-08-25  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/wires3.dlp: Updated to changed #namespace syntax of dlvhex.
	* examples/test.dlp: Likewise.
	* examples/shop-inconsistent.dlp: Likewise.
	* examples/ucq.dlp: Likewise.
	* examples/shop.dlp: Likewise.
	* examples/wires2.hex: Likewise.
	* examples/shop+test.dlp: Likewise.

	* m4/boost.m4: Updating boost.m4 to version currently used in dlvhex.

	* testsuite/TestDLRewriter.cpp: Fixing testsuite compilation.
	* testsuite/TestSuite.cpp: Likewise.

	* include/DFOutputBuilder: Fixed compiler warning.

2009-03-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Add todo item.

	* COPYING: New file.

2009-01-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/RacerInterface.cpp: Remove debug output.

	* src/Answer.cpp: Fix g++4.3 compile errors by #include missing
	headers, see <http://gcc.gnu.org/gcc-4.3/porting_to.html>.
	* src/RacerNRQLBuilder.cpp: Likewise.
	* src/TCPStream.cpp: Likewise.
	* src/Terms.cpp: Likewise.

2008-12-15  DAO Tran Minh  <dao@kr.tuwien.ac.at>
	
	* include/DFOutputBuilder.h: New file.
	* src/DFOutputBuilder.cpp: Likewise.
	
	* src/DFConverter.cpp: Add hasDefaults().
	* src/DFProcessor.cpp: Likewise.
	
	* src/Default.cpp: Add getConclusionNames().
	* src/Defaults.cpp: Likewise.
	
	* src/RacerInterface.cpp: Only return the dfoutputbuilder if any
	default was specified in the input.

2008-12-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/wires3.dlp: New test case.
	* examples/wires3.owl: Likewise.

2008-12-09  DAO Tran Minh  <dao@kr.tuwien.ac.at>
	
	* include/DFProcessor.h: Add a rule for constant_.
	
	* src/Default.cpp: More dom predicates for transformation \Upsilon.

2008-12-01  DAO Tran Minh  <dao@kr.tuwien.ac.at>

	* include/Defaults.h: Add size().
	* src/Defaults.cpp: Likewise.
	
	* src/DFProcessor: Remove "\n" at the end of each other stuff.
	
	* src/DFConverter: Distinguish between having defaults and not.

2008-11-29  DAO Tran Minh  <dao@kr.tuwien.ac.at>
